--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -111,8 +111,8 @@ $filter_top_desktop: 100px;
 .row_global {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: left;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 @media (min-width: 900px) {
